fix(test): open JDK internals for Robolectric 4.17 host tests
Robolectric 4.17's SDK 36 environment creates ApplicationSharedMemory,
which reflects into jdk.internal.access. Add the documented --add-opens
flags so Android host tests can run on JDK 17+.

Co-authored-by: Sargun Vohra <sargunv@users.noreply.github.com>